fixes fab alignment in firefox and safari

--- a/public/styles.css
+++ b/public/styles.css
@@ -93,12 +93,14 @@ figure[id="1"], nav[id="4"], div[id="5"] {
 }
 
 .left-scroll {
-  transform: translateY(0vh);
+  -webkit-transform: translateY(0vh);
+          transform: translateY(0vh);
   top: 0;
 }
 
 .right-scroll {
-  transform: translateY(0vh);
+  -webkit-transform: translateY(0vh);
+          transform: translateY(0vh);
   bottom: 0;
 }
 
@@ -312,13 +314,15 @@ figure[id="1"], nav[id="4"], div[id="5"] {
   height: 100%;
   width: 100%;
   border-radius: 0 0 90px 90px;
+  background: -webkit-radial-gradient(at 50% 50%, saddlebrown 30%, #4d3017 88%);
   background: radial-gradient(at 50% 50%, saddlebrown 30%, #4d3017 88%);
           clip-path: url("https://mbr84.github.io/cssfx/index.html#neutral-mouth");
   -webkit-clip-path: polygon(14.0px 15.0px, 13.38197px 14.90211px, 12.82443px 14.61803px, 12.38197px 14.17557px, 12.09789px 13.61803px, 12.0px 13.0px, 12.09789px 12.38197px, 12.38197px 11.82443px, 12.82443px 11.38197px, 13.38197px 11.09789px, 14.0px 11.0px, 13px 11px, 14px 11px, 14.5px 11px, 15px 11px, 16px 11px, 17px 11px, 18px 11px, 19px 11px, 20px 11px, 21px 11px, 22px 11px, 23px 11px, 24px 11px, 25px 11px, 26px 11px,26px 11px,26px 11px,26px 11px,26px 11px,26px 11px, 27px 11px, 27.5px 11px, 28px 11px, 29px 11px, 30px 11px,30px 11px, 31px 11px, 32px 11px, 40px 11px, 41px 11px, 42px 11px, 43px 11px, 44px 11px,44px 11px,44px 11px,44px 11px,44px 11px, 45px 11px, 46px 11px, 47px 11px, 48px 11px, 49px 11px, 50px 11px, 51px 11px, 52px 11px, 53px 11px, 60.0px 11.0px, 60.61803px 11.09789px, 61.17557px 11.38197px, 61.61803px 11.82443px, 61.90211px 12.38197px, 62.0px 13.0px, 61.90211px 13.61803px, 61.61803px 14.17557px, 61.17557px 14.61803px, 60.61803px 14.90211px, 60px 15px);
           clip-path: polygon(14.0px 15.0px, 13.38197px 14.90211px, 12.82443px 14.61803px, 12.38197px 14.17557px, 12.09789px 13.61803px, 12.0px 13.0px, 12.09789px 12.38197px, 12.38197px 11.82443px, 12.82443px 11.38197px, 13.38197px 11.09789px, 14.0px 11.0px, 13px 11px, 14px 11px, 14.5px 11px, 15px 11px, 16px 11px, 17px 11px, 18px 11px, 19px 11px, 20px 11px, 21px 11px, 22px 11px, 23px 11px, 24px 11px, 25px 11px, 26px 11px,26px 11px,26px 11px,26px 11px,26px 11px,26px 11px, 27px 11px, 27.5px 11px, 28px 11px, 29px 11px, 30px 11px,30px 11px, 31px 11px, 32px 11px, 40px 11px, 41px 11px, 42px 11px, 43px 11px, 44px 11px,44px 11px,44px 11px,44px 11px,44px 11px, 45px 11px, 46px 11px, 47px 11px, 48px 11px, 49px 11px, 50px 11px, 51px 11px, 52px 11px, 53px 11px, 60.0px 11.0px, 60.61803px 11.09789px, 61.17557px 11.38197px, 61.61803px 11.82443px, 61.90211px 12.38197px, 62.0px 13.0px, 61.90211px 13.61803px, 61.61803px 14.17557px, 61.17557px 14.61803px, 60.61803px 14.90211px, 60px 15px);
 
   -webkit-transition: all 1s cubic-bezier(.87,-.41,.19,1.44);
-  transform: scalex(.98) scaley(.85);
+  -webkit-transform: scalex(.98) scaley(.85);
+          transform: scalex(.98) scaley(.85);
   overflow: hidden;
 }
 
@@ -343,12 +347,14 @@ figure[id="1"], nav[id="4"], div[id="5"] {
   height: 100%;
   width: 100%;
   border-radius: 0 0 90px 90px;
+  background: -webkit-radial-gradient(at 50% 50%, saddlebrown 30%, #4d3017 88%);
   background: radial-gradient(at 50% 50%, saddlebrown 30%, #4d3017 88%);
   -webkit-clip-path: polygon(0px 41px,0px 41px,0px 41px,0px 41px,0px 41px,0px 41px, 1.0px 7.6px, 1.03278px 7.28813px, 1.12968px 6.9899px, 1.28647px 6.71832px, 1.4963px 6.48528px, 1.75px 6.30096px, 2.03647px 6.17342px, 2.34321px 6.10822px, 2.65679px 6.10822px, 2.96353px 6.17342px, 3.25px 6.30096px, 5.25865px 7.25087px, 6.90384px 7.83347px, 8.55896px 8.38726px, 10.22349px 8.91209px, 11.89692px 9.40778px, 13.57876px 9.87419px, 15.26847px 10.31118px, 16.96555px 10.71862px, 18.66949px 11.09637px, 20.37976px 11.44433px, 22.09584px 11.76239px, 23.81721px 12.05044px, 25.54335px 12.30842px, 27.27373px 12.53623px, 29.00781px 12.7338px, 30.74509px 12.90108px, 32.48501px 13.03802px, 34.22706px 13.14456px, 35.97071px 13.22069px, 37.71542px 13.26638px, 39.46066px 13.28161px, 41.2059px 13.26638px, 42.95061px 13.22069px, 44.69426px 13.14456px, 46.43631px 13.03802px, 48.17623px 12.90108px, 49.91351px 12.7338px, 51.64759px 12.53623px, 53.37797px 12.30842px, 55.10411px 12.05044px, 56.82548px 11.76239px, 58.54156px 11.44433px, 60.25183px 11.09637px, 61.95577px 10.71862px, 63.65285px 10.31118px, 65.34256px 9.87419px, 67.0244px 9.40778px, 68.69783px 8.91209px, 70.36236px 8.38726px, 72.75px 7.30096px, 73.26535px 7.11847px, 73.81187px 7.13278px, 74.31696px 7.34199px, 74.71353px 7.71832px, 74.94889px 8.21177px, 74.99178px 8.75679px, 78px 41px, 78px 41px, 78px 41px, 78px 41px, 78px 41px);
           clip-path: polygon(0px 41px,0px 41px,0px 41px,0px 41px,0px 41px,0px 41px, 1.0px 7.6px, 1.03278px 7.28813px, 1.12968px 6.9899px, 1.28647px 6.71832px, 1.4963px 6.48528px, 1.75px 6.30096px, 2.03647px 6.17342px, 2.34321px 6.10822px, 2.65679px 6.10822px, 2.96353px 6.17342px, 3.25px 6.30096px, 5.25865px 7.25087px, 6.90384px 7.83347px, 8.55896px 8.38726px, 10.22349px 8.91209px, 11.89692px 9.40778px, 13.57876px 9.87419px, 15.26847px 10.31118px, 16.96555px 10.71862px, 18.66949px 11.09637px, 20.37976px 11.44433px, 22.09584px 11.76239px, 23.81721px 12.05044px, 25.54335px 12.30842px, 27.27373px 12.53623px, 29.00781px 12.7338px, 30.74509px 12.90108px, 32.48501px 13.03802px, 34.22706px 13.14456px, 35.97071px 13.22069px, 37.71542px 13.26638px, 39.46066px 13.28161px, 41.2059px 13.26638px, 42.95061px 13.22069px, 44.69426px 13.14456px, 46.43631px 13.03802px, 48.17623px 12.90108px, 49.91351px 12.7338px, 51.64759px 12.53623px, 53.37797px 12.30842px, 55.10411px 12.05044px, 56.82548px 11.76239px, 58.54156px 11.44433px, 60.25183px 11.09637px, 61.95577px 10.71862px, 63.65285px 10.31118px, 65.34256px 9.87419px, 67.0244px 9.40778px, 68.69783px 8.91209px, 70.36236px 8.38726px, 72.75px 7.30096px, 73.26535px 7.11847px, 73.81187px 7.13278px, 74.31696px 7.34199px, 74.71353px 7.71832px, 74.94889px 8.21177px, 74.99178px 8.75679px, 78px 41px, 78px 41px, 78px 41px, 78px 41px, 78px 41px);
   background: radial-gradient(at 50% 50%, saddlebrown 30%, #4d3017 88%);
   -webkit-transition: all 1s cubic-bezier(.87,-.41,.19,1.44);
-  transform: scalex(.98) scaley(.95);
+  -webkit-transform: scalex(.98) scaley(.95);
+          transform: scalex(.98) scaley(.95);
   overflow: hidden;
 }
 
@@ -813,8 +819,9 @@ figure {
 @media (min-width: 450px) {
   .goo-container {
     width: 100%;
-    /*right: 38%;*/
-    transform: translateX(-17vw);
+    right: 38%;
+    /*-webkit-transform: translateX(-17vw);
+            transform: translateX(-17vw);*/
   }
 }
 
